# tensorbank

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  bump_autobuild_version.py  pyproject.toml
docs/: Makefile  conf.py  index.rst
docs/reference/: axis_aligned_boxes.rst  index.rst  points.rst  slices.rst
tensorbank/tf/: __init__.py  axis_aligned_boxes.py  points.py  slices.py
tests/tf/: axis_aligned_boxes_test.py  points_test.py  slices_test.py
