[tool.poetry]
name = "tensorbank"
version = "0.1.0"
description = "a collection of assorted algorithms expressed in Tensors."
authors = ["Paul Shved <pavel.shved@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "http://github.com/pshved/tensorbank"
packages = [{include = "tensorbank"}]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = ">=2.0"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
